--- a/WorkMarketingNet.Web/package.json
+++ b/WorkMarketingNet.Web/package.json
@@ -1,10 +1,13 @@
 {
-    "version": "0.1.0",
-    "name": "WorkMarketingNet.Web",
-    "private": true,
-    "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-bower-task": "^0.4.0",
-        "grunt-contrib-less": "^0.12.0"
-    }
+  "version": "0.1.0",
+  "name": "WorkMarketingNet.Web",
+  "private": true,
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-less": "^0.12.0"
+  },
+  "dependencies": {
+    "grunt-contrib-less": "^0.12.0"
+  }
 }
