--- a/WorkMarketingNet.Web/package.json
+++ b/WorkMarketingNet.Web/package.json
@@ -5,7 +5,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
-    "grunt-contrib-less": "^0.12.0"
+    "grunt-newer": "^1.1.0",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "imagemin-mozjpeg": "^4.0.0"
   },
   "dependencies": {
     "grunt-contrib-less": "^0.12.0"
