--- a/WorkMarketingNet.Web/package.json
+++ b/WorkMarketingNet.Web/package.json
@@ -6,6 +6,7 @@
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
     "grunt-newer": "^1.1.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "imagemin-mozjpeg": "^4.0.0"
