--- a/WorkMarketingNet.Web/bower.json
+++ b/WorkMarketingNet.Web/bower.json
@@ -2,7 +2,9 @@
     "name": "WorkMarketingNet.Web",
     "private": true,
     "dependencies": {
-        "polymer": "Polymer/polymer#^0.5"
+        "polymer": "Polymer/polymer#^0.5",
+        "core-elements": "Polymer/core-elements",   
+        "paper-elements": "Polymer/paper-elements"
     },
     "exportsOverride": {
     }
