--- a/WorkMarketingNet.Web/bower.json
+++ b/WorkMarketingNet.Web/bower.json
@@ -3,8 +3,9 @@
     "private": true,
     "dependencies": {
         "polymer": "Polymer/polymer#^0.5",
-        "core-elements": "Polymer/core-elements",   
-        "paper-elements": "Polymer/paper-elements"
+        "core-elements": "Polymer/core-elements",
+        "paper-elements": "Polymer/paper-elements",
+        "flatiron-director": "PolymerLabs/flatiron-director"
     },
     "exportsOverride": {
     }
