--- a/WorkMarketingNet.Web/project.json
+++ b/WorkMarketingNet.Web/project.json
@@ -4,11 +4,16 @@
     "dependencies": {
         "Microsoft.AspNet.Server.IIS": "1.0.0-beta3",
         "Microsoft.AspNet.StaticFiles": "1.0.0-beta3",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta3"
+        "Microsoft.AspNet.Mvc": "6.0.0-beta3",
+        "EntityFramework.SqlServer": "7.0.0-beta3",
+        "EntityFramework.Commands": "7.0.0-beta3"
     },
     "frameworks": {
         "aspnet50": { },
         "aspnetcore50": { }
+    },
+    "commands": {
+        "ef": "EntityFramework.Commands"
     },
     "bundleExclude": [
         "node_modules",
