--- a/WorkMarketingNet.Web/bower.json
+++ b/WorkMarketingNet.Web/bower.json
@@ -5,7 +5,8 @@
         "polymer": "Polymer/polymer#^0.5",
         "core-elements": "Polymer/core-elements",
         "paper-elements": "Polymer/paper-elements",
-        "flatiron-director": "PolymerLabs/flatiron-director"
+        "flatiron-director": "PolymerLabs/flatiron-director",
+        "signalr": "2.2.0"
     },
     "exportsOverride": {
     }
