--- a/WorkMarketingNet.Web/project.json
+++ b/WorkMarketingNet.Web/project.json
@@ -6,7 +6,8 @@
         "Microsoft.AspNet.StaticFiles": "1.0.0-beta3",
         "Microsoft.AspNet.Mvc": "6.0.0-beta3",
         "EntityFramework.SqlServer": "7.0.0-beta3",
-        "EntityFramework.Commands": "7.0.0-beta3"
+        "EntityFramework.Commands": "7.0.0-beta3",
+        "Microsoft.AspNet.SignalR.Server": "3.0.0-*"
     },
     "frameworks": {
         "aspnet50": { },
